--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+
+
+
+
+
+.checklist {
+  padding-left: 80px;
+  padding-top: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.checklist-title {
+  font-size: 24px;
+  margin-bottom: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.item-type-subheading {
+  font-size: 18px;
+  margin-bottom: 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.feature-table {
+  margin-bottom: 25px;
+  table-layout: fixed;
+  width: 500px;
+}
+
+
+.table-name-header {
+  text-align: left;
+  font-weight: bold;
+}
+
+.table-lowPrice-header {
+  text-align: right;
+  font-weight: bold;
+}
+
+.table-highPrice-header {
+  text-align: right;
+  font-weight: bold;
+}
+
+.table-lowPrice {
+  text-align: right;
+}
+
+.table-highPrice {
+  text-align: right;
+}
+
+.table-total {
+  text-align: right;
+  font-weight: bold;
+}
+
+button {
+  font-size: 15px;
+  background-color: black;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 3px 15px;
+  border-radius: 10px;
+  font-family: 'Raleway';
 }
