--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,26 @@
 
 
 
+.budget-query {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 500px;
+  width: 100vw;
+  padding-top: 90px;
+}
+
+.budget-title {
+  font-size: 35px;
+  margin-bottom: 30px;
+}
+
+.budget-input {
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 30px;
+}
 
 
 .checklist {
@@ -54,7 +74,7 @@
 }
 
 button {
-  font-size: 15px;
+  font-size: 17px;
   background-color: black;
   color: white;
   padding: 3px 15px;
