Add conditional formatting to 'total budget' line on checklist, green if on or below budget, red if overbudget'

--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,11 @@
 .table-total {
   text-align: right;
   font-weight: bold;
+  color: green;
+}
+
+.table-total.overbudget {
+  color: red;
 }
 
 button {
